# restaurant-task

./: .gitignore  .pylintrc  README.md  e301.yaml  pyproject.toml
src/: test.py
src/restaurant_task/: config.py
src/restaurant_task/application/robot/grasp_item_service/: grasp_item_service.py
src/restaurant_task/application/robot/navigate_to_spot_service/: navigate_to_spot_service.py
src/restaurant_task/application/robot/restaurant_task_service/: restaurant_task_service.py
src/restaurant_task/application/robot/serve_item_service/: serve_item_service.py  serve_item_service_dto.py
src/restaurant_task/application/robot/take_order_service/: take_order_dto.py  take_order_service.py
src/restaurant_task/application/robot/wait_door_open_service/: wait_door_open_service.py
src/restaurant_task/domain/models/item/: README.md  category.py  i_item_repository.py  item.py  item_id.py  item_identity.py
src/restaurant_task/domain/models/order/: i_order_repository.py  order.py  order_id.py  order_identity.py  seat_number.py
src/restaurant_task/domain/models/physical_item/: README.md  i_physical_item_repository.py  physical_item.py  physical_item_identity.py
src/restaurant_task/domain/models/robot/: README.md  i_robot_agent.py  robot.py  robot_id.py  robot_identity.py  robot_status.py
src/restaurant_task/infrastructure/csvdb/: csvdb.py
src/restaurant_task/presentation/: main.py
test/item/: test_item_repository.py
test/robot/: test_hsrb.py  test_hsrb_speak.py  test_move_service.py  test_take_order_service.py  test_vosk.py
(+29 files in other folders)
